--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>질문사항 보내기</title>
+</head>
+<body>
+  <h1>문의사항 보내기</h1>
+  <form name="submit-to-google-sheet">
+    <label>이름: <input name="name" required></label><br><br>
+    <label>이메일: <input name="email" type="email" required></label><br><br>
+    <label>질문 내용:<br><textarea name="message" rows="5" cols="40" required></textarea></label><br><br>
+    <button type="submit">제출</button>
+  </form>
+  <p id="response"></p>
+
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec';
+    const form = document.forms['submit-to-google-sheet'];
+    const response = document.getElementById('response');
+
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+          form.reset();
+          response.innerHTML = "제출되었습니다. 감사합니다!";
+        })
+        .catch(error => {
+          response.innerHTML = "오류가 발생했습니다. 다시 시도해주세요.";
+        });
+    });
+  </script>
+</body>
+</html>
