--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>댓글 기능 테스트</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 2rem;
-    }
-    .comment-box {
-      margin-top: 2rem;
-      border-top: 1px solid #ccc;
-      padding-top: 1rem;
-    }
-    iframe {
-      border: none;
-      width: 100%;
-      height: 150px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Utterances 댓글 기능</title>
 </head>
 <body>
 
-  <h1>블로그 포스트 제목</h1>
+  <h1>블로그 게시글 제목</h1>
   <p>이곳은 본문 내용입니다...</p>
 
-  <div class="comment-box">
-    <h2>댓글 달기</h2>
-    <a href="https://github.com/inhaj/inhaj.github.io/issues/new?title=댓글+for+/post-title" target="_blank">
-      👉 이 페이지에 댓글을 GitHub 이슈로 남기기
-    </a>
-    
-    <p style="margin-top: 1rem;">댓글은 GitHub 저장소의 이슈 탭에서 확인할 수 있습니다.</p>
-    <p><a href="https://github.com/inhaj/inhaj.github.io/issues" target="_blank">🗂 댓글 모아보기</a></p>
-  </div>
+  <div id="comments"></div>
+
+  <script src="https://utteranc.es/client.js"
+          repo="inhaj/inhaj.github.io"
+          issue-term="pathname"
+          label="💬 comment"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
 
 </body>
 </html>
