--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
 
-  <h1>블로그 게시글 제목</h1>
-  <p>이곳은 본문 내용입니다. 이 아래에 댓글이 나타납니다.</p>
+  <h1>여기에 질문사항을 남겨주세요</h1>
+ 
 
   <div id="comments">
     <!-- 댓글이 여기에 삽입됨 -->
