--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Utterances 댓글 기능</title>
+  <title>문의사항 신청</title>
 
   <style>
     body {
