--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <h1>여기에 질문사항을 남겨주세요</h1>
- 
+   <p>문의 사항이 있으시다면 wprkfdlsgk@gmail.com로 바랍니다.</p>
 
   <div id="comments">
     <!-- 댓글이 여기에 삽입됨 -->
