--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </script>
   </div>
 
-  <div id="privacy-section">
+<!--   <div id="privacy-section">
     <!-- privacy.html 내용이 여기에 삽입됨 -->
-  </div>
+  </div> -->
 
   <script>
     fetch('privacy.html')
