--- a/paycheck/index.html
+++ b/paycheck/index.html
@@ -31,6 +31,20 @@
   </style>
 </head>
 <body>
+  <h1> Pay Check </h1>
+
+  <div style="text-align: center;">
+    <img src="https://inhaj.github.io/assets/images/A20A72E5-14EB-4278-A5DF-89935CE3F433.jpeg" alt="애니메이션1" style="width: 200px; margin: 10px;" />
+    <img src="https://inhaj.github.io/assets/images/ECAA3351-DF3C-45D1-BC30-4BD53B93ED8D.jpeg" alt="애니메이션2" style="width: 200px; margin: 10px;" />
+  </div>
+
+    <h3> 소개 </h3>
+    
+
+<div> ‘Pay Check’ 앱은 내가 실시간으로 직장에서 얼마를 벌고 있는지 손쉽게 추적할 수 있습니다.</div>
+
+<div> 나의 실시간 소득을 눈으로 확인해보세요.</div>
+
 
   <h1>여기에 질문사항을 남겨주세요</h1>
   <p>문의 사항이 있으시다면 <a href="mailto:wprkfdlsgk@gmail.com">wprkfdlsgk@gmail.com</a> 로 메일을 보내주시거나, 아래 댓글을 통해 문의하실 수 있습니다.</p>
