--- a/paycheck/index.html
+++ b/paycheck/index.html
@@ -34,8 +34,8 @@
   <h1> Pay Check </h1>
 
   <div style="text-align: center;">
-    <img src="https://inhaj.github.io/assets/images/A20A72E5-14EB-4278-A5DF-89935CE3F433.jpeg" alt="애니메이션1" style="width: 200px; margin: 10px;" />
-    <img src="https://inhaj.github.io/assets/images/ECAA3351-DF3C-45D1-BC30-4BD53B93ED8D.jpeg" alt="애니메이션2" style="width: 200px; margin: 10px;" />
+    <img src="https://inhaj.github.io/src/paycheck/fire.png" alt="애니메이션1" style="width: 200px; margin: 10px;" />
+    <img src="https://inhaj.github.io/src/paycheck/rabbit.png" alt="애니메이션2" style="width: 200px; margin: 10px;" />
   </div>
 
     <h3> 소개 </h3>
