--- a/paycheck/index.html
+++ b/paycheck/index.html
@@ -68,7 +68,7 @@
 
 <!--   <div id="privacy-section">
     <!-- privacy.html 내용이 여기에 삽입됨 -->
-  </div> -->
+  </div> 
 
   <script>
     fetch('privacy.html')
