--- a/paycheck/index.html
+++ b/paycheck/index.html
@@ -66,7 +66,7 @@
     </script>
   </div>
 
-<!--   <div id="privacy-section">
+<div id="privacy-section">
     <!-- privacy.html 내용이 여기에 삽입됨 -->
   </div> 
 
