--- a/paycheck/index.html
+++ b/paycheck/index.html
@@ -49,7 +49,7 @@
   
   <p>문의 사항이 있으시다면 <a href="mailto:wprkfdlsgk@gmail.com">wprkfdlsgk@gmail.com</a> 로 메일을 보내주시거나, 아래 댓글을 통해 문의하실 수 있습니다.</p>
 
-  <p><a href="#privacy-section">📄 개인정보 처리방침 보기</a></p>
+  <p><a href="privacy.html">📄 개인정보 처리방침 보기</a></p>
 
 
   <h1>여기에 질문사항을 남겨주세요</h1>
