--- a/open-dm/index.html
+++ b/open-dm/index.html
@@ -30,7 +30,7 @@
     </style>
   </head>
   <body>
-    <h1>Pay Check</h1>
+    <h1>Open DM</h1>
 
     <div style="text-align: center">
       <img
@@ -57,7 +57,7 @@
     <p>
       문의 사항이 있으시다면
       <a href="mailto:wprkfdlsgk@gmail.com">wprkfdlsgk@gmail.com</a> 로 메일을
-      보내주시거나, 아래 댓글을 통해 문의하실 수 있습니다.
+      보내주십시오
     </p>
   </body>
 </html>
